--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^8.1.4",
     "@supabase/supabase-js": "^2.48.1",
     "next": "^15.1.6",
+    "nextjs": "^0.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
