--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "@supabase/supabase-js": "^2.48.1",
+    "@vercel/analytics": "^1.5.0",
     "next": "^15.1.6",
     "nextjs": "^0.0.3",
     "react": "^19.0.0",
